production/k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temporal-cloud
  labels:
    app.kubernetes.io/name: temporal-cloud
---
apiVersion: v1
kind: Namespace
metadata:
  name: temporal-system
  labels:
    app.kubernetes.io/name: temporal-system
